narwhal/config/tests/snapshots/config_tests__committee.snap
---
source: narwhal/config/tests/config_tests.rs
expression: committee
---
{
  "authorities": {
    "ku8PylNwBUMzkshpDSeMnbV25O8rPkUFDPcqAyeEXztH02eOq6WemzFMEsi1p0LrBvKBvTLpwLwHhkCatYptihcO75iZRjtFkYwkAlv0GmQQyHZ+xO+UYweLQiYdFHtf": {
      "id": 0,
      "protocol_key": "ku8PylNwBUMzkshpDSeMnbV25O8rPkUFDPcqAyeEXztH02eOq6WemzFMEsi1p0LrBvKBvTLpwLwHhkCatYptihcO75iZRjtFkYwkAlv0GmQQyHZ+xO+UYweLQiYdFHtf",
      "protocol_key_bytes": "ku8PylNwBUMzkshpDSeMnbV25O8rPkUFDPcqAyeEXztH02eOq6WemzFMEsi1p0LrBvKBvTLpwLwHhkCatYptihcO75iZRjtFkYwkAlv0GmQQyHZ+xO+UYweLQiYdFHtf",
      "stake": 1,
      "primary_address": "/ip4/127.0.0.1/udp/0",
      "network_key": "Zm3+Rl2weh6VsEmVBAALZ9Pk1yOf+nHpT8LsI1l/0q8=",
      "initialised": true
    },
    "mfJe9h+AMrkUY2RgmCxcxvE07x3a52ZX8sv+wev8jQlzdAgN9vzw3Li8Sw2OCvXYDrv/K0xZn1T0LWMS38MUJ2B4wcw0fru+xRmL4lhRPzhrkw0CwnSagD4jMJVevRoQ": {
      "id": 1,
      "protocol_key": "mfJe9h+AMrkUY2RgmCxcxvE07x3a52ZX8sv+wev8jQlzdAgN9vzw3Li8Sw2OCvXYDrv/K0xZn1T0LWMS38MUJ2B4wcw0fru+xRmL4lhRPzhrkw0CwnSagD4jMJVevRoQ",
      "protocol_key_bytes": "mfJe9h+AMrkUY2RgmCxcxvE07x3a52ZX8sv+wev8jQlzdAgN9vzw3Li8Sw2OCvXYDrv/K0xZn1T0LWMS38MUJ2B4wcw0fru+xRmL4lhRPzhrkw0CwnSagD4jMJVevRoQ",
      "stake": 1,
      "primary_address": "/ip4/127.0.0.1/udp/0",
      "network_key": "iRf3oG9ka0fwbVnVX9BQ3m9wisZbj4rDCF/q5oTjLU4=",
      "initialised": true
    },
    "ofT8sYBvqkB+c/sjDYTwar96xgZbTdi/ncbet8ja9ePYhtSje59zyarNpF/ZxM1dAncK6uyr9Xv1lS7bJs+nSj2k0bMvbStf5RORLeuPwYz/yJrDOQQf4MxOnW0u8Gzo": {
      "id": 2,
      "protocol_key": "ofT8sYBvqkB+c/sjDYTwar96xgZbTdi/ncbet8ja9ePYhtSje59zyarNpF/ZxM1dAncK6uyr9Xv1lS7bJs+nSj2k0bMvbStf5RORLeuPwYz/yJrDOQQf4MxOnW0u8Gzo",
      "protocol_key_bytes": "ofT8sYBvqkB+c/sjDYTwar96xgZbTdi/ncbet8ja9ePYhtSje59zyarNpF/ZxM1dAncK6uyr9Xv1lS7bJs+nSj2k0bMvbStf5RORLeuPwYz/yJrDOQQf4MxOnW0u8Gzo",
      "stake": 1,
      "primary_address": "/ip4/127.0.0.1/udp/0",
      "network_key": "LC/82uPqS70tgF56yNcxk5O1TD37cuMArVZDxvROh6M=",
      "initialised": true
    },
    "q1ys+9ZU8B5aHgYbgyC5N0XQlGdq1B7xY9D8JOyT89upZpiuKRUDBsq3h/WbLtd4AvLNFNECBjlAG06r8heq7tEs6ol97VfaS2579e4b337eJAwd/y1bIt4F+LhEc3sV": {
      "id": 3,
      "protocol_key": "q1ys+9ZU8B5aHgYbgyC5N0XQlGdq1B7xY9D8JOyT89upZpiuKRUDBsq3h/WbLtd4AvLNFNECBjlAG06r8heq7tEs6ol97VfaS2579e4b337eJAwd/y1bIt4F+LhEc3sV",
      "protocol_key_bytes": "q1ys+9ZU8B5aHgYbgyC5N0XQlGdq1B7xY9D8JOyT89upZpiuKRUDBsq3h/WbLtd4AvLNFNECBjlAG06r8heq7tEs6ol97VfaS2579e4b337eJAwd/y1bIt4F+LhEc3sV",
      "stake": 1,
      "primary_address": "/ip4/127.0.0.1/udp/0",
      "network_key": "dqJ63C6YZnD7A5GKXt7kPzZ/HzbCxobxbOy3xRXx+2U=",
      "initialised": true
    }
  },
  "authorities_by_id": {
    "0": {
      "id": 0,
      "protocol_key": "ku8PylNwBUMzkshpDSeMnbV25O8rPkUFDPcqAyeEXztH02eOq6WemzFMEsi1p0LrBvKBvTLpwLwHhkCatYptihcO75iZRjtFkYwkAlv0GmQQyHZ+xO+UYweLQiYdFHtf",
      "protocol_key_bytes": "ku8PylNwBUMzkshpDSeMnbV25O8rPkUFDPcqAyeEXztH02eOq6WemzFMEsi1p0LrBvKBvTLpwLwHhkCatYptihcO75iZRjtFkYwkAlv0GmQQyHZ+xO+UYweLQiYdFHtf",
      "stake": 1,
      "primary_address": "/ip4/127.0.0.1/udp/0",
      "network_key": "Zm3+Rl2weh6VsEmVBAALZ9Pk1yOf+nHpT8LsI1l/0q8=",
      "initialised": true
    },
    "1": {
      "id": 1,
      "protocol_key": "mfJe9h+AMrkUY2RgmCxcxvE07x3a52ZX8sv+wev8jQlzdAgN9vzw3Li8Sw2OCvXYDrv/K0xZn1T0LWMS38MUJ2B4wcw0fru+xRmL4lhRPzhrkw0CwnSagD4jMJVevRoQ",
      "protocol_key_bytes": "mfJe9h+AMrkUY2RgmCxcxvE07x3a52ZX8sv+wev8jQlzdAgN9vzw3Li8Sw2OCvXYDrv/K0xZn1T0LWMS38MUJ2B4wcw0fru+xRmL4lhRPzhrkw0CwnSagD4jMJVevRoQ",
      "stake": 1,
      "primary_address": "/ip4/127.0.0.1/udp/0",
      "network_key": "iRf3oG9ka0fwbVnVX9BQ3m9wisZbj4rDCF/q5oTjLU4=",
      "initialised": true
    },
    "2": {
      "id": 2,
      "protocol_key": "ofT8sYBvqkB+c/sjDYTwar96xgZbTdi/ncbet8ja9ePYhtSje59zyarNpF/ZxM1dAncK6uyr9Xv1lS7bJs+nSj2k0bMvbStf5RORLeuPwYz/yJrDOQQf4MxOnW0u8Gzo",
      "protocol_key_bytes": "ofT8sYBvqkB+c/sjDYTwar96xgZbTdi/ncbet8ja9ePYhtSje59zyarNpF/ZxM1dAncK6uyr9Xv1lS7bJs+nSj2k0bMvbStf5RORLeuPwYz/yJrDOQQf4MxOnW0u8Gzo",
      "stake": 1,
      "primary_address": "/ip4/127.0.0.1/udp/0",
      "network_key": "LC/82uPqS70tgF56yNcxk5O1TD37cuMArVZDxvROh6M=",
      "initialised": true
    },
    "3": {
      "id": 3,
      "protocol_key": "q1ys+9ZU8B5aHgYbgyC5N0XQlGdq1B7xY9D8JOyT89upZpiuKRUDBsq3h/WbLtd4AvLNFNECBjlAG06r8heq7tEs6ol97VfaS2579e4b337eJAwd/y1bIt4F+LhEc3sV",
      "protocol_key_bytes": "q1ys+9ZU8B5aHgYbgyC5N0XQlGdq1B7xY9D8JOyT89upZpiuKRUDBsq3h/WbLtd4AvLNFNECBjlAG06r8heq7tEs6ol97VfaS2579e4b337eJAwd/y1bIt4F+LhEc3sV",
      "stake": 1,
      "primary_address": "/ip4/127.0.0.1/udp/0",
      "network_key": "dqJ63C6YZnD7A5GKXt7kPzZ/HzbCxobxbOy3xRXx+2U=",
      "initialised": true
    }
  },
  "epoch": 0
}
