narwhal/config/tests/snapshots/config_tests__parameters.snap
---
source: narwhal/config/tests/config_tests.rs
expression: parameters
---
{
  "header_num_of_batches_threshold": 32,
  "max_header_num_of_batches": 1000,
  "max_header_delay": "2000ms",
  "min_header_delay": "500ms",
  "gc_depth": 50,
  "sync_retry_delay": "5000ms",
  "sync_retry_nodes": 3,
  "batch_size": 5000000,
  "max_batch_delay": "100ms",
  "block_synchronizer": {
    "range_synchronize_timeout": "30000ms",
    "certificates_synchronize_timeout": "30000ms",
    "payload_synchronize_timeout": "30000ms",
    "payload_availability_timeout": "30000ms",
    "handler_certificate_deliver_timeout": "30000ms"
  },
  "max_concurrent_requests": 500000,
  "prometheus_metrics": {
    "socket_addr": "/ip4/127.0.0.1/tcp/8081/http"
  },
  "network_admin_server": {
    "primary_network_admin_server_port": 1234,
    "worker_network_admin_server_base_port": 5678
  },
  "anemo": {
    "send_certificate_rate_limit": null,
    "get_payload_availability_rate_limit": null,
    "get_certificates_rate_limit": null,
    "report_batch_rate_limit": null,
    "request_batch_rate_limit": null
  }
}
